--- a/_config.yml
+++ b/_config.yml
@@ -272,7 +272,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: categories
     values:
       layout: single
       author_profile: true
