--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,19 @@ main:
     url: /collection-archive/
   - title: "Sitemap"
     url: /sitemap/
+
+sidebar-sample:
+  - title: "Parent Page A"
+    children:
+      - title: "Child Page A1"
+        url: /
+      - title: "Child Page A2"
+        url: /
+  - title: "Parent Page B"
+    children:
+      - title: "Child Page B1"
+        url: /
+      -title: "Child Page B2"
+        url: /
+        
+  
