--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ social:
 analytics:
   provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : "G-RGFLHRWJLR"
     anonymize_ip         : # true, false (default)
 
 
