--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Reveloper"
+title                    : "순탄한 길은 없다"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Jin"
+name                     : "Deep Learning Engineer"
 description              : "An amazing website."
 url                      : "https://jinh2720.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -94,9 +94,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jin"
+  name             : "Deep Learning Engineer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Think **smart**"
+  bio              : "Learn N Use"
   location         : "Seoul, Korea"
   email            :
   links:
