--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,12 +4,12 @@ main:
     url: https://jinh2720.github.io/categories/
   - title: "About"
     url: https://mmistakes.github.io/minimal-mistakes/about/
-  - title: "Sample Posts"
-    url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "Sitemap"
-    url: /sitemap/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
 
 # sidebar-sample:
 #   - title: "Parent Page A"
